--- a/translations/kangyur/translations/073-001_toh340-the_hundred_deeds.xml
+++ b/translations/kangyur/translations/073-001_toh340-the_hundred_deeds.xml
@@ -30,7 +30,7 @@
                 <sponsor xml:id="UT22084-073-001-6954">Ye Kong, Helen Ying Han and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.34 <date>2024</date>
+                <edition>v 1.3.36 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -239,6 +239,12 @@
                 </change>
                 <change who="#martina-cotter" when="2024-02-07T11:52:55.913Z" type="text-version" status="1.3.34" xml:id="UT22084-073-001-7012">
                     <desc>revisions update</desc>
+                </change>
+                <change who="#celso" when="2024-02-27T22:24:16.173Z" type="text-version" status="1.3.35" xml:id="UT22084-073-001-7013">
+                    <desc>updated Kangyur sigla to match rKTS</desc>
+                </change>
+                <change who="#andre" when="2024-04-10T14:02:10.591Z" type="text-version" status="1.3.36" xml:id="UT22084-073-001-7014">
+                    <desc>Spelling brahmaṇa corrected to brāhmaṇa</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -2308,7 +2314,7 @@
                             through the country of Vatsa<note place="end" xml:id="UT22084-073-001-347"> D <foreign xml:lang="Bo-Ltn" type="term">pad ma</foreign> here is most
                                 likely a corruption of <foreign xml:lang="Bo-Ltn" type="term">bad
                                     sa</foreign> (Vatsa), since <foreign xml:lang="Bo-Ltn" type="term">pa</foreign> and <foreign xml:lang="Bo-Ltn" type="term">ba</foreign> are easily confused in handwritten
-                                Tibetan manuscripts, and K<hi rend="subscript">Y</hi>, J, K, N, C,
+                                Tibetan manuscripts, and Y<!--KY-->, J, K, N, C,
                                 and H all read <foreign xml:lang="Bo-Ltn" type="term">sa’i</foreign>
                                 instead of D (and S) <foreign xml:lang="Bo-Ltn" type="term">ma’i</foreign>.</note> and had arrived in Kauśāmbī, where he
                             was staying in the householder Ghoṣila’s garden. Hearing this, he
@@ -16286,7 +16292,7 @@
                         <p tid="2540"> The Blessed One thought, “The time has come to tame young
                             Good Compassion.” He disappeared from the banks of Markaṭahrada and set
                             out toward<note place="end" xml:id="UT22084-073-001-2613">
-                                “Set out toward,” translating with K<hi rend="subscript">Y</hi>, K
+                                “Set out toward,” translating with Y<!--KY-->, K
                                     <foreign xml:lang="Bo-Ltn" type="term">zhugs</foreign> instead
                                 of D, S <foreign xml:lang="Bo-Ltn" type="term">bzhugs</foreign>,
                                 “sitting.” </note> young Good Compassion. Young Good Compassion saw
@@ -25264,7 +25270,7 @@
                                 together.” Scribes also seemed to have trouble interpreting this: J
                                 and C are missing <foreign xml:lang="Bo-Ltn" type="term">btsems
                                     te</foreign>; K has instead the nearly repetitive <foreign xml:lang="Bo-Ltn" type="term">bcas ste</foreign>; N has <foreign xml:lang="Bo-Ltn" type="term">bcas te brtsams te</foreign>; and
-                                    K<hi rend="subscript">Y</hi> gives the alternative spelling
+                                    Y<!--KY--> gives the alternative spelling
                                     <foreign xml:lang="Bo-Ltn" type="term">btsem
                                 ste</foreign>.</note> apportioned among them what wealth was in the
                             house, and gave it to them, they threw me out of the house. That’s why I
@@ -25282,7 +25288,7 @@
                             <l>“Those at whose birth I was happy,</l>
                             <l>For whom I saved up all my wealth,</l>
                             <l>And whose weddings I arranged<note place="end" xml:id="UT22084-073-001-4082"> D and S read <foreign xml:lang="Bo-Ltn" type="quote">tshems dang sbyar</foreign>,
-                                    which is obscure. K<hi rend="subscript">Y</hi>, K, and C read
+                                    which is obscure. Y<!--KY-->, K, and C read
                                         <foreign xml:lang="Bo-Ltn" type="term">tshogs
                                     </foreign>instead of <foreign xml:lang="Bo-Ltn" type="term">tshems</foreign>. This line is rendered roughly according
                                     to the parallel prose passage above. </note>
@@ -25292,7 +25298,7 @@
                         <milestone unit="chunk" xml:id="UT22084-073-001-4083"/>
                         <lg tid="4004">
                             <l>“While using up my wealth,</l>
-                            <l>They cast me out.<note place="end" xml:id="UT22084-073-001-4084"> This rendering is conjectural. D has <foreign xml:lang="Bo-Ltn" type="term">de na min</foreign>; K<hi rend="subscript">Y</hi>, K, N, H, and S read <foreign xml:lang="Bo-Ltn" type="term">bden mo min</foreign>.</note>
+                            <l>They cast me out.<note place="end" xml:id="UT22084-073-001-4084"> This rendering is conjectural. D has <foreign xml:lang="Bo-Ltn" type="term">de na min</foreign>; Y<!--KY-->, K, N, H, and S read <foreign xml:lang="Bo-Ltn" type="term">bden mo min</foreign>.</note>
                             </l>
                             <l>Monsters all, parading as sons—</l>
                             <l>Still I have not forgotten their cries of ‘Papa!’<note place="end" xml:id="UT22084-073-001-4085"> Here the Tibetan
@@ -27235,7 +27241,7 @@
                             have not all attained the unsurpassed, supreme welfare, nor are they all
                             forever free of distorting influences and perfected in their practice of
                             pure conduct. Only those among the ascetics and brahmins who have
-                            exhausted their thirst<note place="end" xml:id="UT22084-073-001-4391"> Reading S, K<hi rend="subscript">Y</hi>, K, N, and H:
+                            exhausted their thirst<note place="end" xml:id="UT22084-073-001-4391"> Reading S, Y<!--KY-->, K, N, and H:
                                     <foreign xml:lang="Bo-Ltn" type="term">sred</foreign>, instead
                                 of D: <foreign xml:lang="Bo-Ltn" type="term">srid</foreign>. </note>
                             for unexcelled liberation and whose perfect minds are utterly liberated
@@ -27249,7 +27255,7 @@
                             distorting influences and perfected in their practice of pure conduct.
                             Only those among the ascetics and brahmins who have exhausted their
                             thirst for<note place="end" xml:id="UT22084-073-001-4393">
-                                Reading S, K<hi rend="subscript">Y</hi>, K, N, and H: <foreign xml:lang="Bo-Ltn" type="term">sred</foreign>, instead of D:
+                                Reading S, Y<!--KY-->, K, N, and H: <foreign xml:lang="Bo-Ltn" type="term">sred</foreign>, instead of D:
                                     <foreign xml:lang="Bo-Ltn" type="term">srid</foreign>. </note>
                             unexcelled liberation and whose perfect minds are utterly liberated have
                             attained the unsurpassed, supreme welfare, and are forever free of
@@ -27295,7 +27301,7 @@
                         <milestone unit="chunk" xml:id="UT22084-073-001-4400"/>
                         <lg tid="4316">
                             <l>“There’s no end to thought construction.<note place="end" xml:id="UT22084-073-001-4401"> While D has <foreign xml:lang="Bo-Ltn" type="term">rtogs pa</foreign>, we
-                                    translate with S, K<hi rend="subscript">Y</hi>, K, N, H <foreign xml:lang="Bo-Ltn" type="term">rtog pa</foreign>. Read as
+                                    translate with S, Y<!--KY-->, K, N, H <foreign xml:lang="Bo-Ltn" type="term">rtog pa</foreign>. Read as
                                         <foreign xml:lang="Bo-Ltn" type="term">rtogs pa</foreign>,
                                     an alt. rendering might be, “Understanding has no end. / Still,
                                     I have my qualms and doubts.”</note>
@@ -28182,9 +28188,9 @@
                             then, and lived the life of a bodhisattva. The man who informed the king
                                 then<note place="end" xml:id="UT22084-073-001-4566"> D:
                                     <foreign xml:lang="Bo-Ltn" type="quote">de’i tshe mi’i rgyal po
-                                    la gsol ba gang yin pa de</foreign>; K<hi rend="subscript">Y</hi>, K: <foreign xml:lang="Bo-Ltn" type="quote">de’i tshe mi
+                                    la gsol ba gang yin pa de</foreign>; Y<!--KY-->, K: <foreign xml:lang="Bo-Ltn" type="quote">de’i tshe mi
                                     rgyal po la gsol ba gang yin pa de</foreign>. This translation
-                                follows the reading in the K<hi rend="subscript">Y</hi> and K
+                                follows the reading in the Y<!--KY--> and K
                                 editions of the Kangyur.</note> is none other than Devadatta. Then,
                             just as now, he did not repay my kindness or have a sense of gratitude,
                             but made a waste of what I did.” <ref cRef="B35" type="bampo"/>
@@ -28987,7 +28993,7 @@
                         <lg tid="4595">
                             <l>“Some here praise food and drink, </l>
                             <l>Others retinue, or women.<note place="end" xml:id="UT22084-073-001-4689"> Read according to
-                                        K<hi rend="subscript">Y</hi> and K, which have <foreign xml:lang="Bo-Ltn" type="term">kha cig ’khor</foreign>. D
+                                        Y<!--KY--> and K, which have <foreign xml:lang="Bo-Ltn" type="term">kha cig ’khor</foreign>. D
                                     reads <foreign xml:lang="Bo-Ltn" type="term">khu bcud
                                         ’khor</foreign>; S, N, and H read <foreign xml:lang="Bo-Ltn" type="term">khu bcud ’dod</foreign>. </note>
                             </l>
@@ -29042,7 +29048,7 @@
                         <lg tid="4603">
                             <l>“You have reflected well upon </l>
                             <l>What strikes to the vital point<note place="end" xml:id="UT22084-073-001-4700"> This line is read
-                                    according to S, K<hi rend="subscript">Y</hi>, K, N, and H:
+                                    according to S, Y<!--KY-->, K, N, and H:
                                         <foreign xml:lang="Bo-Ltn" type="term">kyi gshis</foreign>;
                                     D has <foreign xml:lang="Bo-Ltn" type="term">kyis
                                         gshegs</foreign>. <foreign xml:lang="Bo-Ltn" type="term">gshis</foreign> is here taken as a rendering of the
@@ -29051,7 +29057,7 @@
                             </l>
                             <l>As you dwelt upon phenomena, so finely distinguished— <ref cRef="F.107.b" type="folio" xml:id="UT22084-073-001-6897"/>
                             </l>
-                            <l>You are welcome to resolve it once and for all.<note place="end" xml:id="UT22084-073-001-4701"> According to K<hi rend="subscript">Y</hi>: <foreign xml:lang="Bo-Ltn" type="quote">gtan pa phebs par legs par ’ongs</foreign>; D
+                            <l>You are welcome to resolve it once and for all.<note place="end" xml:id="UT22084-073-001-4701"> According to Y<!--KY-->: <foreign xml:lang="Bo-Ltn" type="quote">gtan pa phebs par legs par ’ongs</foreign>; D
                                     reads <foreign xml:lang="Bo-Ltn" type="quote">gtan la phebs pas
                                         les par ’ongs</foreign>.</note>
                             </l>
@@ -29105,7 +29111,7 @@
                         <milestone unit="chunk" xml:id="UT22084-073-001-4708"/>
                         <p tid="4610">“Great King, when you understand form, you do not grasp at it,
                             thinking, ‘This is my self!’<note place="end" xml:id="UT22084-073-001-4709"> Here and throughout this
-                                section, K<hi rend="subscript">Y</hi>, K, N, and H read simply
+                                section, Y<!--KY-->, K, N, and H read simply
                                     <foreign xml:lang="Bo-Ltn" type="term">bdag gi</foreign>, or
                                     <foreign xml:lang="Bo-Ltn" type="term">bdag gi ba</foreign>,
                                 which would mean “mine” instead of “my self.”</note> Nor do you
@@ -30058,7 +30064,7 @@
                                 <l>He realized the heart of the limbs of enlightenment.</l>
                                 <l>The Blessed One thus recovered from his injury, </l>
                                 <l>Which was more painful than a severe illness.<note place="end" xml:id="UT22084-073-001-4884"> Rendered based on
-                                        K and K<hi rend="subscript">Y</hi>: <foreign xml:lang="Bo-Ltn" type="quote">/bcom ldan snyung tshabs
+                                        K and Y<!--KY-->: <foreign xml:lang="Bo-Ltn" type="quote">/bcom ldan snyung tshabs
                                             che ba bas/ /gnod pa de las gzhegs par gyur/</foreign>.
                                         This has readings shared also with S, N, and H. D, however,
                                         reads: <foreign xml:lang="Bo-Ltn" type="quote">/bcom ldan
@@ -30263,7 +30269,7 @@
                             <milestone unit="chunk" xml:id="UT22084-073-001-4917"/>
                             <p tid="4813">“Having thus prayed for unexcelled, total, and complete
                                 enlightenment, he said, ‘My friend, you may do as you please with my
-                                    body.’<note place="end" xml:id="UT22084-073-001-4918"> Reading S, K<hi rend="subscript">Y</hi>, K <foreign xml:lang="Bo-Ltn" type="term">bdag gi</foreign> instead of D
+                                    body.’<note place="end" xml:id="UT22084-073-001-4918"> Reading S, Y<!--KY-->, K <foreign xml:lang="Bo-Ltn" type="term">bdag gi</foreign> instead of D
                                         <foreign xml:lang="Bo-Ltn" type="term">bdag
                                     gis</foreign>.</note>
                             </p>
@@ -30282,7 +30288,7 @@
                                         <foreign xml:lang="Bo-Ltn" type="term">bdag gi</foreign>, or
                                         S<foreign xml:lang="Bo-Ltn" type="term"> bdag</foreign>,
                                     instead of D <foreign xml:lang="Bo-Ltn" type="term">bdag
-                                        gis</foreign>. K<hi rend="subscript">Y</hi>, K, and N are
+                                        gis</foreign>. Y<!--KY-->, K, and N are
                                     missing <foreign xml:lang="Bo-Ltn" type="term">bdag</foreign>
                                     and <foreign xml:lang="Bo-Ltn" type="term">gis</foreign>/<foreign xml:lang="Bo-Ltn" type="term">gi</foreign>. </note> flesh and to sever your sinews and
                                 veins?’</p>
@@ -30712,8 +30718,7 @@
                             Kangyur</expan>
                     </item>
                     <item xml:id="UT22084-073-001-4998">
-                        <abbr>K<hi rend="subscript">Y</hi>
-                        </abbr>
+                        <abbr>Y<!--KY--></abbr>
                         <expan>Yongle (<foreign xml:lang="Bo-Ltn" type="term">g.yung lo</foreign>)
                             Kangyur</expan>
                     </item>
@@ -33939,7 +33944,7 @@
                 <term>four actions</term>
                 <term xml:lang="Bo-Ltn">bzhi’i las </term>
                 <term xml:lang="bo">བཞིའི་ལས།</term>
-                <term xml:lang="Sa-Ltn"/>
+                
                 <term type="definition">Apparently a vinaya reference, unknown; more research is
                     needed.</term>
             </gloss>
@@ -33961,7 +33966,7 @@
                 <term>two actions</term>
                 <term xml:lang="Bo-Ltn">gnyis kyi las </term>
                 <term xml:lang="bo">གཉིས་ཀྱི་ལས།</term>
-                <term xml:lang="Sa-Ltn"/>
+                
                 <term type="definition">Apparently a vinaya reference, unknown; more research is
                     needed.</term>
             </gloss>
@@ -34936,7 +34941,7 @@
                             <note type="definition">
                                 <p>One of the primary deities of the purāṇic Hindu
                                 pantheon, and perhaps the first to take on the status formerly held
-                                by the cosmic being Prajāpati in the literature of the brahmaṇas. As
+                                by the cosmic being Prajāpati in the literature of the brāhmaṇas. As
                                 a creator god in the purāṇas, <term rend="ignore">Brahmā</term> is
                                 said to have pronounced the mantras of four vedas from each of his
                                 four faces and thus established the sonic foundation for the
@@ -37746,13 +37751,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-073-001-5505">
+                        <gloss xml:id="UT22084-073-001-5505" type="person" mode="match">
                             <term type="translationMain">Supriya</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">supriya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rab dga’</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རབ་དགའ།</term>
                             <note type="definition">
-                                <p>A certain gandharva king.</p>
+                                <p>A gandharva king.</p>
                             </note>
                         </gloss>
                     </item>
@@ -38386,7 +38391,7 @@
                           <term>Wealth (the nāga king)</term>
                           <term xml:lang="Bo-Ltn">dbyig </term>
                           <term xml:lang="bo">དབྱིག</term>
-                          <term xml:lang="Sa-Ltn"/>
+                          
                           <term type="definition">...</term>
                           <term type="alternative">Wealth</term>
                       </gloss>
@@ -39534,7 +39539,7 @@
                 <term>Otalā Forest</term>
                 <term xml:lang="Bo-Ltn">o ta la’i nags </term>
                 <term xml:lang="bo">ཨོ་ཏ་ལའི་ནགས།</term>
-                <term xml:lang="Sa-Ltn"/>
+                
                 <term type="definition">See “Otalā.”</term>
             </gloss>
         </item>-->
@@ -39916,7 +39921,7 @@
                 <term>House of Ghosts</term>
                 <term xml:lang="Bo-Ltn">’byung po’i khyim </term>
                 <term xml:lang="bo">འབྱུང་པོའི་ཁྱིམ།</term>
-                <term xml:lang="Sa-Ltn"/>
+                
                 <term type="definition">A locale in the Adumā region visited by the Buddha.</term>
             </gloss>
         </item>-->
