--- a/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
+++ b/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-006-465">Rory Lindsay</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.6 <date>2023</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -157,6 +157,12 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-20T16:16:15.865Z" type="text-version" status="1.0.6" xml:id="UT22084-090-006-477">
                     <desc>updated typos.</desc>
+                </change>
+                <change who="#celso" when="2024-02-27T22:24:16.173Z" type="text-version" status="1.0.7" xml:id="UT22084-090-006-478">
+                    <desc>updated Kangyur sigla to match rKTS</desc>
+                </change>
+                <change who="#andre" when="2024-04-10T14:16:00.149Z" type="text-version" status="1.0.8" xml:id="UT22084-090-006-479">
+                    <desc>Spelling brahmaṇa corrected to brāhmaṇa</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1309,7 +1315,7 @@
                                                 <l>Kumbhīrā<note place="end" xml:id="UT22084-090-006-136"> Here we follow IOL
                                                   Tib J 397 in reading <foreign xml:lang="Bo-Ltn" type="quote">kum bhī ra</foreign>. This name is
                                                   further suggested by the readings <foreign xml:lang="Bo-Ltn" type="quote">ku bhi ra</foreign>
-                                                  attested in K, K<hi rend="subscript">Y</hi>, N,
+                                                  attested in K, Y<!--KY-->, N,
                                                   and S. Degé reads <foreign xml:lang="Bo-Ltn" type="quote">ku be ra</foreign>. </note> in
                                                   Rājagṛha,</l>
                                                 <l>
@@ -1607,7 +1613,7 @@
                                                   Grove</title>. Great Kings, to rejoice in <title xml:lang="en">The Great Sūtra of Cool
                                                   Grove</title>, I will, moreover, utter the great
                                                 king of vidyā-mantras.<note place="end" xml:id="UT22084-090-006-182"> This translation
-                                                  follows IOL Tib J 397, K, K<hi rend="subscript">Y</hi>, N, and S in reading <foreign xml:lang="Bo-Ltn" type="quote">rigs sngags kyi
+                                                  follows IOL Tib J 397, K, Y<!--KY-->, N, and S in reading <foreign xml:lang="Bo-Ltn" type="quote">rigs sngags kyi
                                                   rgyal po chen po</foreign>. Degé reads <foreign xml:lang="Bo-Ltn" type="quote">rigs sngags kyi
                                                   rgyal mo chen mo</foreign> (“the great queen of
                                                   vidyā-mantras”).</note> Listen carefully and
@@ -1698,7 +1704,7 @@
                                         <milestone unit="chunk" xml:id="UT22084-090-006-196"/>
                                         <p tid="178">When the Four Great Kings heard the Blessed
                                                 One’s great king of vidyā-mantras,<note place="end" xml:id="UT22084-090-006-197"> This translation
-                                                  follows C, J, K, K<hi rend="subscript">Y</hi>, N,
+                                                  follows C, J, K, Y<!--KY-->, N,
                                                   and S in reading <foreign xml:lang="Bo-Ltn" type="quote">rigs sngags kyi rgyal po chen
                                                   po</foreign>. Degé reads <foreign xml:lang="Bo-Ltn" type="quote">rigs sngags kyi
                                                   rgyal mo chen mo</foreign> (“the great queen of
@@ -2111,8 +2117,7 @@
                                                   Kangyur</expan>
                     </item>
                                         <item xml:id="UT22084-090-006-400">
-                        <abbr>K<hi rend="subscript">Y</hi>
-                        </abbr>
+                        <abbr>Y<!--KY--></abbr>
                         <expan>Peking Yongle
                                                   Kangyur</expan>
                     </item>
@@ -2412,7 +2417,7 @@
                                         <item>
                         <gloss type="term" xml:id="UT22084-090-006-276">
                             <term type="translationMain">mendicants and brahmins</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śramaṇa­brahmaṇa</term>
+                                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śramaṇa­brāhmaṇa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dge sbyong dang bram ze</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དགེ་སྦྱོང་དང་བྲམ་ཟེ།</term>
                             <note type="definition">
