--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -24,7 +24,7 @@
         <sponsor xml:id="UT22084-090-038-289">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.15 <date>2023</date>
+                <edition>v 1.2.17 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -209,6 +209,12 @@
                 </change>
                 <change who="#sameer" when="2023-09-15T10:44:59.7Z" type="text-version" status="1.2.15" xml:id="UT22084-090-038-338">
                     <desc>Included in App v 3.4</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.2.16" xml:id="UT22084-090-038-339">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#andre" when="2024-04-10T14:16:17.412Z" type="text-version" status="1.2.17" xml:id="UT22084-090-038-340">
+                    <desc>Spelling brahmaṇa corrected to brāhmaṇa</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1569,7 +1575,7 @@
           <item>
                         <gloss type="term" xml:id="UT22084-090-038-202">
                             <term type="translationMain">brahmin</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">brahmaṇavarṇa</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">brāhmaṇavarṇa</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bram ze’i rigs</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྲམ་ཟེའི་རིགས།</term>
                             <note type="definition">
@@ -1660,7 +1666,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">cakravartin</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’khor los sgyur ba</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འཁོར་ལོས་སྒྱུར་བ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Literally a “wheel holder,” a king who rules over vast
                 territories. </p>
                             </note>
@@ -1733,8 +1739,8 @@
                             <term type="translationMain">great sāl tree</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahāsāla</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahāśāla</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shing sa la chen po</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཤིང་ས་ལ་ཆེན་པོ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shing sA la chen po</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཤིང་སཱ་ལ་ཆེན་པོ།</term>
                             <note type="definition">
                                 <p>This can refer either to the sal (or sala) tree (<foreign xml:lang="la" type="term">Shorea robusta</foreign>) or to a great (<foreign xml:lang="Sa-Ltn" type="term">mahā</foreign>) household (<foreign xml:lang="Sa-Ltn" type="term">śāla</foreign>). The Buddha was said to have been
                 born and died beneath a sāla tree. </p>
@@ -1925,8 +1931,8 @@
                         <gloss xml:id="UT22084-090-038-238" type="place" mode="match">
                             <term type="translationMain">Gaṅgā River</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">gaṅgā</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang ga’i klung</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">གང་གའི་ཀླུང་།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gang gA’i klung</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">གང་གཱའི་ཀླུང་།</term>
                             <note type="definition" rend="override">
                                 <p>The Ganges River in India. </p>
                             </note>
@@ -1991,8 +1997,8 @@
                             <term type="translationMain">Khampa Lotsāwa Bari Chödrak</term>
                             <term type="translationAlternative">Khampa Lotsāwa</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">khams pa lo tsa wa ba ri chos grags</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཁམས་པ་ལོ་ཙ་ཝ་བ་རི་ཆོས་གྲགས།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">khams pa lo tsA wa ba ri chos grags</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཁམས་པ་ལོ་ཙཱ་ཝ་བ་རི་ཆོས་གྲགས།</term>
                             <note type="definition">
                                 <p>1040–11; the Tibetan translator and second throne-holding Sakya heirarch, also 
                 known as Bari Lotsāwa or Rinchen Drak (<foreign xml:lang="Bo-Ltn">rin chen grags</foreign>) who, along with this and many other texts, also translated 
