--- a/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
+++ b/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
@@ -13,14 +13,15 @@
                 <author role="translatorEng" xml:id="UT22084-087-010-2">Adam Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-087-010-20">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-087-010-29">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-087-010-39">George FitzHerbert</editor>
                 <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-087-010"/>
                 <date/>
             </publicationStmt>
@@ -107,6 +108,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-18T13:24:49.467Z" type="text-version" status="0.0.15" xml:id="UT22084-087-010-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T13:18:03.79Z" type="text-version" status="0.0.16" xml:id="UT22084-087-010-40">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T07:37:42.343Z" type="translation-status" status="2.b" xml:id="UT22084-087-010-41">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T07:37:42.343Z" type="text-version" status="0.0.17" xml:id="UT22084-087-010-42">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
