--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-087-002-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-087-002"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-087-002-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T07:43:48.255Z" type="translation-status" status="2.g" xml:id="UT22084-087-002-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T07:43:48.255Z" type="text-version" status="0.0.5" xml:id="UT22084-087-002-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
