--- a/translations/kangyur/placeholders/081-017_toh448-the_tantra_of_tarayogini.xml
+++ b/translations/kangyur/placeholders/081-017_toh448-the_tantra_of_tarayogini.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-081-017-5">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-081-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -46,6 +46,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-11-07T08:27:09.756Z" type="text-version" status="0.0.2" xml:id="UT22084-081-017-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T08:32:42.272Z" type="translation-status" status="2.h" xml:id="UT22084-081-017-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T08:32:42.272Z" type="text-version" status="0.0.3" xml:id="UT22084-081-017-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
