--- a/translations/kangyur/placeholders/081-018_toh449-the_supplementary_tantra_of_tarayogini.xml
+++ b/translations/kangyur/placeholders/081-018_toh449-the_supplementary_tantra_of_tarayogini.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-081-018-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-081-018"/>
                 <date/>
             </publicationStmt>
@@ -46,6 +46,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-081-018-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T08:40:06.674Z" type="translation-status" status="2.h" xml:id="UT22084-081-018-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-12T08:40:06.674Z" type="text-version" status="0.0.4" xml:id="UT22084-081-018-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
