--- a/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
+++ b/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
@@ -15,13 +15,14 @@
                 <author role="translatorEng" xml:id="UT22084-091-040-2">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-091-040-13">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-040-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-040-32">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-040"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +100,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-18T14:29:46.616Z" type="text-version" status="0.0.11" xml:id="UT22084-091-040-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-11T12:54:54.717Z" type="text-version" status="0.0.12" xml:id="UT22084-091-040-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T08:55:01.134Z" type="translation-status" status="2.b" xml:id="UT22084-091-040-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T08:55:01.134Z" type="text-version" status="0.0.13" xml:id="UT22084-091-040-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
