--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-010-25">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-010"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +100,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-01T14:32:18.96Z" type="text-version" status="0.0.13" xml:id="UT22084-091-010-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T09:43:35.142Z" type="translation-status" status="2.c" xml:id="UT22084-091-010-29">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T09:43:35.142Z" type="text-version" status="0.0.14" xml:id="UT22084-091-010-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
