--- a/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
+++ b/translations/kangyur/placeholders/094-009_toh732,992-the_incantation_of_yasovati.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-094-009-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-094-009"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +86,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-04T15:09:34.028Z" type="text-version" status="0.0.9" xml:id="UT22084-094-009-23">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T09:49:11.601Z" type="translation-status" status="2.c" xml:id="UT22084-094-009-24">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T09:49:11.601Z" type="text-version" status="0.0.10" xml:id="UT22084-094-009-25">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
