--- a/translations/kangyur/placeholders/093-017_toh702-the_lions_roar_tantra.xml
+++ b/translations/kangyur/placeholders/093-017_toh702-the_lions_roar_tantra.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-093-017-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-093-017"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +82,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-25T15:58:30.831Z" type="text-version" status="0.0.10" xml:id="UT22084-093-017-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T11:49:09.403Z" type="translation-status" status="2.c" xml:id="UT22084-093-017-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T11:49:09.403Z" type="text-version" status="0.0.11" xml:id="UT22084-093-017-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
