--- a/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
@@ -13,11 +13,11 @@
                 <editor role="copyEditor" xml:id="UT22084-093-019-20">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-093-019"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +74,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-25T16:00:39.427Z" type="text-version" status="0.0.10" xml:id="UT22084-093-019-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T11:58:46.916Z" type="translation-status" status="2.c" xml:id="UT22084-093-019-24">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-15T11:58:46.916Z" type="text-version" status="0.0.11" xml:id="UT22084-093-019-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
