--- a/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-072-10">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-072"/>
             </publicationStmt>
             <sourceDesc>
@@ -71,6 +71,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:32:58.455Z" type="text-version" status="0.0.2" xml:id="UT22084-096-072-11">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-16T08:52:23.347Z" type="translation-status" status="2.h" xml:id="UT22084-096-072-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-16T08:52:23.347Z" type="text-version" status="0.0.3" xml:id="UT22084-096-072-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
